--- a/greenEd/www/templates/wall.html
+++ b/greenEd/www/templates/wall.html
@@ -3,16 +3,15 @@
       <button ng-if="addwall" class="button button-icon button-clear ion-ios-plus-outline" ng-click="addpost()"></button>
   </ion-nav-buttons>
    <ion-content>
-   <ion-refresher pulling-text="Pull to refresh" on-refresh="getWall()"></ion-refresher>
+   <ion-refresher pulling-text="Pull to refresh" on-refresh="getWall(true)"></ion-refresher>
    <div ng-show="loading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
-    <div ng-show="empty" class="list">
+    <div ng-if="empty && !loading" class="list">
     <a class="item item-icon-left" href="#">
     <i class="icon ion-ios-list positive"></i>
     No wall item found
     </a>
    </div>
-   
-  <div class="list card" ng-repeat="(wk,wall) in walls">
+  <div class="list list-inset" ng-repeat="(wk,wall) in walls">
   <div class="item item-avatar">
     <i class="icon ion-person wall-title positive"></i>
     <h2>{{wall.name}}</h2>
@@ -30,8 +29,9 @@
     <i ng-if="wall.likeuids && (wall.likeuids.indexOf(uid) != -1)" ng-click="like(wk,'dislike')" class="icon ion-thumbsdown assertive"></i>
     {{wall.like}} {{(wall.like == 1) ? 'Like' : 'Likes'}}
   </a>
-
   </div>
-   
+<ion-infinite-scroll on-infinite="loadMoreData()" ng-if="!moredata">
+</ion-infinite-scroll>
+<div ng-if="moredata" class="wall-final"></div>
    </ion-content>
 </ion-view>
