greened with flavour

--- a/greenEd/www/templates/addpost.html
+++ b/greenEd/www/templates/addpost.html
@@ -19,7 +19,7 @@
       </div>
    </ion-content>
    <div class="row bar bar-footer">
-      <input type="text" class="col col-80 add-post-text" placeholder="What's on your mind ???" ng-model="post.message">
+      <input type="text" class="col col-80" placeholder="What's on your mind ???" ng-model="post.message">
       <button class="col send-button button button-icon icon-center button-clean ion-android-send" ng-click="submit()"></button>
 </div>
 </ion-view>
