--- a/greenEd/www/templates/dashboardFilters.html
+++ b/greenEd/www/templates/dashboardFilters.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
 <ion-header-bar class="bar-positive">
-  <h2 class="title title-left item-icon-right positive item-icon-left"><i class="icon ion-funnel"></i>{{filters.educationyears[filters.educationyear]}} {{filters.typeofexams[filters.typeofexam]}}<i ng-click="closeModal()" class="icon ion-ios-close-outline pointer"></i></h2>
+  <h2 class="title title-left item-icon-right positive item-icon-left"><i class="icon ion-funnel"></i>{{title}}<i ng-click="closeModal()" class="icon ion-ios-close-outline pointer"></i></h2>
 </ion-header-bar>
 <ion-content>
 <form>
