--- a/greenEd/www/templates/wall.html
+++ b/greenEd/www/templates/wall.html
@@ -11,7 +11,7 @@
     No wall item found
     </a>
    </div>
-  <div class="list list-inset" ng-repeat="(wk,wall) in walls">
+  <div class="list card" ng-repeat="(wk,wall) in walls">
   <div class="item item-avatar">
     <i class="icon ion-person wall-title positive"></i>
     <h2>{{wall.name}}</h2>
