--- a/greenEd/www/css/style.css
+++ b/greenEd/www/css/style.css
@@ -52,9 +52,9 @@
 .list .item.sub {
   padding-left: 10px;
 }
-.item-icon-left .icon {
+/*.item-icon-left .icon {
  left: 5px;
-}
+}*/
 .item .badge {
   right: 5px;
 }
@@ -67,16 +67,9 @@
 text {
   font-family: Helvetica;
 }
-.button {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-}
 .filters {z-index: -1000;}
 .menu-left h1 {margin: 0;}
 .filters .submit {padding: 0px;}
-.bar {padding: 0;}.platform-android .bar .title{font-size: 18px;margin:0 2px;}.bar .title + .buttons{right:0;}
-.bar.bar-footer {
-  background: #fff;
-}
 .grade-b .menu-content, .grade-c .menu-content {left: 0px; right: 0px; box-shadow: -1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0, 0, 0, 0.2);}
 .menu-left {left: 1px;}
 .transparent {
@@ -99,7 +92,6 @@ text {
   right: 0;
   top: 0;
 }
-
 
 /* Fix modal backdrop for smaller devices */
 @media (max-width: 679px) {
@@ -167,7 +159,6 @@ text {
   padding-top: 8px;
   font-size: 104px;
 }
-input[type="search"] {width: 100%;}
 .bar-footer .add-post-text {
   border: 1px solid #f6f6f6;
   margin: 0 0 0px 5px;
@@ -191,7 +182,6 @@ input[type="search"] {width: 100%;}
 #logo h4 {margin: 0;}
 .pane.tab-content {top: 92px;}
 .tabs-striped .tab-item.tab-item-active, .tabs-striped .tab-item.active, .tabs-striped .tab-item.activated {border-color: #23b7e5;}
-.header-search .item-input-wrapper {margin: 0 6px 0 6px;}
 /* allows the bar-footer to be elastic /*
 /* optionally set a max-height */
 /* maxlength on the textarea will prevent /*
@@ -223,13 +213,6 @@ button.ion-android-send {
   white-space: nowrap;
   font-size: 13px;
 }
-.header-search.bar.item-input-inset .item-input-wrapper input {
-  padding-left: 0px;
-}
-.bar.item-input-inset .item-input-wrapper input {
-  width: 100% !important;
-}
-
 .message-wrapper {
   position: relative;
 }
@@ -262,13 +245,13 @@ button.ion-android-send {
 }
 
 .chat-bubble.left {
-  background-color: #e6e5eb;
+  background-color: #ffffff;
   float: left;
   margin-left: 10px;
 }
 
 .chat-bubble.left:before {
-  background-color: #e6e5eb;
+  background-color: #ffffff;
   top: 0px;
   -webkit-transform: rotate(0deg) skew(25deg);
   left: -2px;
@@ -314,7 +297,13 @@ a.autolinker {
   color: #3b88c3;
   text-decoration: none;
 }
+.msg-input {
+    margin-top: 2px;
+}
 
+.submit-btns {
+    text-align: center;
+}
 /* loading */
 .loader-center {
   height: 100%;
@@ -341,3 +330,229 @@ a.autolinker {
 .empty-slide .slider-pager {display: none;}
 .ttempty {margin-top: 42px;}
 .wall-final {height: 20px;}
+.days .item .icon {
+font-size: 52px;
+    left: 8px;
+    top: -2px;
+}
+.days .item .icon .day {
+    font-size: 20px;
+    top: 6px;
+    left: 8px;
+}
+.days .item.single .icon .day { left:14px;}
+.days .item.single .icon {}
+.platform-ios .filter-results {position:relative;top: 20px;}
+.filter-bar-backdrop {
+    -webkit-transition: opacity 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+.filter-bar-backdrop.active {
+    z-index: 10;
+    opacity: 1; }
+
+.filter-bar {
+    position: fixed;
+    width: 100%;
+    height: 44px;
+    z-index: 10; }
+.filter-bar .filter-bar-wrapper {
+    z-index: 11;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%; }
+.filter-bar .filter-bar-wrapper .item-input-inset .icon.placeholder-icon:before {
+    padding-top: 3px;
+    font-size: 16px; }
+.filter-bar .filter-bar-wrapper .item-input-inset .item-input-wrapper {
+    background: #fff;
+    height: 28px; }
+.filter-bar .filter-bar-wrapper .item-input-inset .item-input-wrapper .filter-bar-clear {
+    padding: 0 2px 0 0; }
+.filter-bar .filter-bar-wrapper .item-input-inset .item-input-wrapper .filter-bar-clear:before {
+    color: #aaa;
+    font-size: 18px;
+    padding-top: 1px; }
+
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper {
+    border-bottom: 1px solid #ccc;
+    background: white; }
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper input[type="search"] {
+    color: #444; }
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: #aaaaaa;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-light .item-input-wrapper .filter-bar-clear:before {
+    color: #444; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper {
+    border-bottom: 1px solid #a2a2a2;
+    background: #f8f8f8; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper input[type="search"] {
+    color: #444; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: #aaaaaa;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-stable .item-input-wrapper .filter-bar-clear:before {
+    color: #444; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper {
+    border-bottom: 1px solid #0c60ee; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-positive .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper {
+    border-bottom: 1px solid #0a9dc7;
+    background: #11c1f3; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-calm .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper {
+    border-bottom: 1px solid #e42112;
+    background: #ef473a; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-assertive .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper {
+    border-bottom: 1px solid #28a54c;
+    background: #33cd5f; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-balanced .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper {
+    border-bottom: 1px solid #e6b500;
+    background: #ffc900; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-energized .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper {
+    border-bottom: 1px solid #6b46e5;
+    background: #886aea; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-royal .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper {
+    border-bottom: 1px solid #000;
+    background: #444444; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper input[type="search"] {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: white; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: white;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-dark .item-input-wrapper .filter-bar-clear:before {
+    color: #fff; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper {
+    border-bottom: 1px solid #ccc;
+    background: white; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper input[type="search"] {
+    color: #444; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper input[type="search"]::-moz-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper input[type="search"]:-ms-input-placeholder {
+    color: #aaaaaa; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper input[type="search"]::-webkit-input-placeholder {
+    color: #aaaaaa;
+    text-indent: 0; }
+.platform-android .filter-bar .filter-bar-default .item-input-wrapper .filter-bar-clear:before {
+    color: #444; }
+.platform-android .filter-bar-wrapper .item-input-inset {
+    padding-right: 24px; }
+.platform-android .filter-bar-wrapper .item-input-inset .filter-bar-cancel {
+    padding-left: 0; }
+.platform-android .filter-bar-wrapper .item-input-inset .filter-bar-cancel:before {
+    font-size: 24px; }
+.platform-android .filter-bar-wrapper .item-input-inset .item-input-wrapper {
+    border-radius: 0;
+    padding-left: 0;
+    margin-left: 10px; }
+.platform-android .filter-bar-wrapper .item-input-inset .item-input-wrapper input[type="search"] {
+    font-weight: 500; }
+.platform-android .filter-bar-wrapper .item-input-inset .item-input-wrapper .filter-bar-clear:before {
+    font-size: 20px; }
+
+.filter-bar-transition-horizontal {
+    -webkit-transition: -webkit-transform cubic-bezier(.25, .45, .05, 1) 300ms;
+    transition: transform cubic-bezier(.25, .45, .05, 1) 300ms;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0); }
+
+.filter-bar-transition-vertical {
+    -webkit-transition: -webkit-transform cubic-bezier(.25, .45, .05, 1) 350ms;
+    transition: transform cubic-bezier(.25, .45, .05, 1) 350ms;
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0); }
+
+.filter-bar-transition-fade {
+    -webkit-transition: opacity 250ms ease-in-out;
+    transition: opacity 250ms ease-in-out;
+    opacity: 0; }
+
+.filter-bar-in {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1; }
