--- a/greenEd/www/templates/messages.html
+++ b/greenEd/www/templates/messages.html
@@ -1,45 +1,39 @@
-   <ion-view cache-view="false" title="{{title}}" hide-nav-bar="filterStatus">
-   	<div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
-    <span class="left-buttons">
-  <button class="button button-icon button-clear ion-android-arrow-back" ng-click="filterStatus = !filterStatus"></button>
-    </span>
-    <ion-search placeholder="Search" filter="query.search"></ion-search>
-    <div class="buttons buttons-right header-item">
-    </div>
-  </div>
-	<ion-nav-buttons side="right">
-	<button class="button button-icon button-clear ion-ios-search" ng-click="changeStatus()"></button>
-    </ion-nav-buttons>
-        <ion-tabs tabs-type="tabs-icon-only" class="positive">
-            <ion-tab class="positive" title="Messages" icon-on="ion-ios-chatboxes" icon-off="ion-ios-chatboxes-outline" on-select="getMessages(false)">
-                <ion-content has-header="true">
-                <ion-refresher pulling-text="Pull to refresh" on-refresh="getMessages(true)"></ion-refresher>
-                <div ng-show="chatLoading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
-                <div class="list">
-<a class="item item-icon-left" href="#/app/messages/{{m.chatid}}/{{m.uid}}/{{m.name}}/{{m.type}}" ng-repeat="m in chatrooms | filter:query.search.value">
-    <i class="icon ion-chatbubble-working"></i>
-    <h2>{{m.name}}
-    <span ng-hide="m.notify == 0" class="badge badge-assertive">{{m.notify}}</span></h2>
-  </a>
-  <a ng-show="chatEmpty" class="item item-icon-left">
-    <i class="icon ion-chatbubble-working"></i>
-    <h2>No chats available</h2>
-  </a>
-</div>
-                </ion-content>
-            </ion-tab>
+<ion-view cache-view="false" view-title="{{title}}">
 
-            <ion-tab class="positive" title="People" icon-on="ion-ios-personadd" icon-off="ion-ios-personadd-outline" on-select="getUsers(false)">
-                <ion-content class="has-header">
-                <ion-refresher pulling-text="Pull to refresh" on-refresh="getUsers(true)"></ion-refresher>
-                <div ng-show="contactLoading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
-                <div class="list">
-  <a ng-click="toMessageBox(contact)" class="item item-icon-left" ng-repeat="contact in allcontacts | filter:query.search.value | orderBy:['role','name']">
-  <i class="icon positive" ng-class="{'ion-easel' : contact.role == 'class', 'ion-person' : contact.role == 'parent', 'ion-ios-body' : contact.role == 'teacher', 'ion-android-person' : contact.role == 'hm'}"></i>
-     <h2>{{contact.name}}</h2>
-  </a>
-</div>
-                </ion-content>
-            </ion-tab>
-        </ion-tabs>
-    </ion-view>
+  <ion-nav-buttons side="secondary">
+    <button class="button button-icon icon ion-ios-search-strong" ng-click="showFilterBar()">
+    </button>
+  </ion-nav-buttons>
+  <ion-tabs tabs-type="tabs-icon-only" class="positive">
+    <ion-tab class="positive" title="Messages" icon-on="ion-ios-chatboxes" icon-off="ion-ios-chatboxes-outline" on-select="getItems('chats')">
+      <ion-content has-header="true" direction="y" scrollbar-y="false">
+        <ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="refreshItems('chats')"></ion-refresher>
+        <div ng-show="chatLoading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
+        <div class="list">
+        <a class="item item-icon-left" href="#/app/messages/{{m.chatid}}/{{m.uid}}/{{m.name}}/{{m.type}}/{{m.notify}}" ng-repeat="m in items | orderBy:['-notify']">
+          <i class="icon ion-chatbubble-working"></i>
+          <h2>{{m.name}}
+          <span ng-hide="m.notify == 0" class="badge badge-assertive">{{m.notify}}</span></h2>
+        </a>
+        <a ng-show="chatEmpty" class="item item-icon-left">
+          <i class="icon ion-chatbubble-working"></i>
+          <h2>No chats available</h2>
+        </a>
+        </div>
+      </ion-content>
+    </ion-tab>
+
+    <ion-tab class="positive" title="People" icon-on="ion-ios-personadd" icon-off="ion-ios-personadd-outline" on-select="getItems('contacts')">
+      <ion-content class="has-header" direction="y" scrollbar-y="false">
+      <ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="refreshItems('contacts')"></ion-refresher>
+      <div ng-show="contactLoading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
+      <div class="list">
+        <a ng-click="toMessageBox(contact)" class="item item-icon-left" ng-repeat="contact in items | orderBy:['role','name']">
+          <i class="icon positive" ng-class="{'ion-easel' : contact.role == 'class', 'ion-person' : contact.role == 'parent', 'ion-ios-body' : contact.role == 'teacher', 'ion-android-person' : contact.role == 'hm'}"></i>
+          <h2>{{contact.name}}</h2>
+        </a>
+      </div>
+      </ion-content>
+    </ion-tab>
+  </ion-tabs>
+</ion-view>
