--- a/greenEd/www/templates/messagebox.html
+++ b/greenEd/www/templates/messagebox.html
@@ -47,7 +47,7 @@
           </ion-content>
           <ion-footer-bar align-title="left">
             <label class="title">
-              <input type="text" placeholder="Send {{toUser.name}} a message" ng-model="input.message" class="msg-input">
+              <input type="text" placeholder="Send {{toUser.name}} a message" ng-model="input.message" class="add-post-text">
             </label>
             <button type="submit" class="send-button button button-icon icon-center button-clean ion-android-send" ng-click="sendMessage()" ng-disabled="!input.message || input.message === ''">
             </button>
