--- a/greenEd/www/templates/dashboardFilters.html
+++ b/greenEd/www/templates/dashboardFilters.html
@@ -1,6 +1,12 @@
 <ion-modal-view>
 <ion-header-bar class="bar-positive">
-  <h2 class="title title-left item-icon-right positive item-icon-left"><i class="icon ion-funnel"></i>{{title}}<i ng-click="closeModal()" class="icon ion-ios-close-outline pointer"></i></h2>
+	<div class="buttons buttons-left header-item">
+		<span class="left-buttons"><button class="button button-icon button-clear ion-funnel"></button></span>
+    </div>
+     <div class="title title-center header-item">{{title}}</div>
+     <div class="buttons buttons-right">
+     	<span class="right-buttons"><button ng-show="dashboard" class="button button-icon button-clear ion-ios-close-outline " ng-click="closeModal()"></button></span>
+     </div>
 </ion-header-bar>
 <ion-content>
 <form>
