--- a/greenEd_pro/www/templates/bustracking.html
+++ b/greenEd_pro/www/templates/bustracking.html
@@ -1,12 +1,8 @@
-<ion-view title="Search">
+<ion-view title="Bus Tracking">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
       <map on-create="mapCreated(map)"></map>
-
-    <ion-footer-bar class="bar-stable">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
-    </ion-footer-bar>
   </ion-content>
 </ion-view>
