--- a/greenEd_pro/www/templates/bustracking.html
+++ b/greenEd_pro/www/templates/bustracking.html
@@ -1,4 +1,4 @@
-<ion-view title="Bus Tracking">
+<ion-view cache-view="false" title="Bus Tracking">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
