--- a/greenEdBackend/app/views/addschool.html
+++ b/greenEdBackend/app/views/addschool.html
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="col-sm-12">
-      <form name="forma" class="form-horizontal form-validation">
+      <form name="forma" class="form-horizontal form-validation" ng-submit="createSchool()">
         <div class="panel panel-default">
           <div class="panel-heading bg-white">
-            <strong>Add School</strong>
+            <strong>Fill the school details</strong>
           </div>
           <div class="panel-body">
             <div class="form-group">
