--- a/greenEdBackend/app/views/login.html
+++ b/greenEdBackend/app/views/login.html
@@ -14,7 +14,7 @@
       </div>
       <form name="form">
         <div class="md-form-group">
-          <input type="email" class="md-input" ng-model="email" required>
+          <input type="text" class="md-input" ng-model="email" required>
           <label>Email</label>
         </div>
         <div class="md-form-group">
