--- a/greenedapp/app/assets/revolution_slider/css/rs-style.css
+++ b/greenedapp/app/assets/revolution_slider/css/rs-style.css
@@ -66,7 +66,7 @@ website:   	http://www.themepunch.com
 
 .fullwidthbanner-container .fullwidthabnner	{
 	width:100% !important;
-	max-height:500px !important;
+	height:704px !important;
 	position:relative;
 }
 
