--- a/greenEd_dev/www/templates/menu.html
+++ b/greenEd_dev/www/templates/menu.html
@@ -21,6 +21,7 @@
                <ion-item ng-if="!link.header" nav-clear menu-close class="item-icon-left" href="#{{link.href}}"><i class="icon {{link.class}} positive"></i><h2>{{linkItem[link.index]}} {{link.title}}</h2></ion-item>
             </div>
             <ion-item nav-clear menu-close class="item-icon-left" href="#/app/days/events"><i class="icon ion-calendar positive"></i><h2>Events</h2></ion-item> 
+            <ion-item nav-clear menu-close class="item-icon-left" href="#/app/calendar"><i class="icon ion-calendar positive"></i><h2>Calendar</h2></ion-item>
             <ion-item nav-clear menu-close class="item-icon-left" href="#/app/days/holidays"><i class="icon ion-happy positive"></i><h2>Holidays</h2></ion-item>
             <ion-item nav-clear menu-close class="item-icon-left" href="#/app/account"><i class="icon ion-person positive"></i><h2>Account</h2></ion-item>            
             <ion-item nav-clear class="item-icon-left" ng-click="logout()"><i class="icon ion-log-out positive"></i><h2>Logout</h2></ion-item>
