--- a/greenEdBackend/app/views/addstudent.html
+++ b/greenEdBackend/app/views/addstudent.html
@@ -6,12 +6,13 @@
 			        <span class="label pull-right m-r-md amber">{{step}}/7</span>
 		        	<span class="h4" ng-if="student.name">{{student.name}}</span>
 					<span class="h4" ng-if="student.id"> / {{student.id}}</span>
-					<span class="h4" ng-if="student.male"> / {{student.male}}</span>
-					<span class="h4" ng-if="student.female"> / {{student.female}}</span>
+					<span class="h4" ng-if="student.sex"> / {{student.sex}}</span>
 					<span class="h4" ng-if="student.address"> / {{student.address}}</span>
 					<span class="h4" ng-if="student.parent"> / {{student.parent}}</span>
 					<span class="h4" ng-if="student.parentphone"> / {{student.parentphone}}</span>
-		            <span class="h4" ng-repeat="(sk, sv) in student.subjects" ng-if="student.subjects[sk].subject"> / {{sv.subject}} - {{sv.teacher}}</span>
+					<span class="h4" ng-if="student.standard"> / {{student.standard}}</span>
+					<span class="h4" ng-if="student.division"> - {{student.division}}</span>
+		            <span class="h4" ng-repeat="(sk, sv) in student.subjects" ng-if="student.subjects[sk]"> / {{sv.subject}}</span>
 	        	</div>
 	        </div>
         	<div class="card-tools">
@@ -21,22 +22,29 @@
                     <i class="mdi-navigation-more-vert text-md"></i>
                   <div class="md-ripple-container"></div></a>
                   <ul class="dropdown-menu dropdown-menu-scale pull-right pull-up top text-color">
-                    <li ng-show="import"><a href="" ng-click="reset()">Add Teacher</a></li>
-                    <li ng-hide="import"><a href="" ng-click="importTeachers()">Import Teacher</a></li>
+                    <li ng-show="import"><a href="" ng-click="reset()">Add Student</a></li>
+                    <li ng-hide="import"><a href="" ng-click="importTeachers()">Import Students</a></li>
                   </ul>
                 </li>
               </ul>
             </div>
             <div class="card-body">
 	         	<div class="form-wrapper" ng-show="import"><br>
-					<form role="form" ng-submit="csvImport(csv.result)">
+					<form role="form" ng-submit="csvImport(csv.result)" ng-hide="importing">
 					    <center><ng-csv-import content="csv.content" header="true" result="csv.result"></ng-csv-import></center><br>
 					    <center><button type="submit" class="btn btn-info"><i class="fa fa-download"></i> Import</button></center>
 					</form>
+					<div class="message center" ng-show="importing">
+						<div class="progress progress-striped active" ng-hide="importMsg == 'Import completed successfully.'">
+					        <div class="progress-bar progress-bar-info" style="width:{{importStatusP}}">{{importStatusP}}</div>
+					    </div>
+						<h4>{{importMsg}} ({{importStatus}}/{{importTotal}})</h4>
+						<button ng-if="importMsg == 'Import completed successfully.'" type="button" class="btn btn-info" ng-click="importTeachers()"><i class="fa fa-download"></i> Import next sheet</button>
+					</div>
 	         	</div>
 	         	<div class="message center" ng-if="msg != ''">
 				  <h1>{{msg}}</h1>
-				  <button ng-if="msg != 'Creating Student...'" type="button" class="btn btn-info" ng-click="reset()"><i class="fa fa-user"></i> Add another Teacher</button>
+				  <button ng-if="msg != 'Creating Student...'" type="button" class="btn btn-info" ng-click="reset()"><i class="fa fa-user"></i> Add another student</button>
 	         	</div>
 
 	         	<span ng-if="msg == ''" ng-hide="import">
@@ -66,10 +74,10 @@
 		                        <label class="text-info"> Enter Student Sex</label>
 		                        <div class="radios">
                                   <label class="label_radio" for="radio-01">
-                                      <input name="sex" ng-model="student.sex" id="radio-01" value="1" type="radio" checked focus-me="true" /> Male
+                                      <input name="sex" ng-model="student.sex" id="radio-01" value="male" type="radio" checked focus-me="true" /> Male
                                   </label>
                                   <label class="label_radio" for="radio-02">
-                                      <input name="sex" ng-model="student.sex" id="radio-02" value="1" type="radio" /> Female
+                                      <input name="sex" ng-model="student.sex" id="radio-02" value="female" type="radio" /> Female
                                   </label>
                               	</div>
 							</div>
@@ -103,10 +111,10 @@
 					      </div>
 					      <div ng-switch-when="6">
 		                  	<div class="md-form-group col-sm-10">
-		                        <label class="text-info">Class And Division</label>
+		                        <label class="text-info">Standard And Division</label>
 		                        <div class="row">
 		                        <div class="col-md-6">
-		                        <input class="md-input" placeholder="Class" ng-model="student.class" name="class" type="text" required ng-focus focus-me="true" />
+		                        <input class="md-input" placeholder="Standard" ng-model="student.standard" name="class" type="text" required ng-focus focus-me="true" />
 		                        <div role="alert">
 							      	<span class="error" ng-show="addForm.class.$error.required && addForm.class.$focused">Required</span>
 							      </div>
@@ -131,23 +139,6 @@
 								  </div>
 								</div>
 		                    </div>
-					      </div>
-					      <div ng-switch-when="8">
-					      	<div class="md-form-group col-sm-10 ">
-								<label class="add-data-g-l">Teacher Subjects and Classes</label>
-			                    <div class="row" ng-repeat="(k,v) in teacher.subjects">
-								  <div class="col-md-1">
-								  	<button ng-click="(k == 0) ? createSubject(): removeSubject(k)" class="btn custom-add-icon btn-default"><i class="fbtn ibtn fa" ng-class="{ 'fa-plus' : k == 0, 'fa-trash' : k !== 0}"></i></button>
-								  	</div>
-								  <div class="col-md-6">
-								  	<input placeholder="Subject" class="md-input" ng-model="teacher.subjects[k].subject" type="text" required focus-me="true" ng-focus \>
-								  </div>
-								  <div class="col-md-5"><input placeholder="Class" class="md-input" ng-model="teacher.subjects[k].class" type="text"></div>
-								</div>
-		                        <div role="alert">
-							      <span class="error" ng-show="addForm.name.$error.required && addForm.name.$focused"><small>Required</small></span>
-							    </div>
-							</div>
 					      </div>
 					   </div>
 	                  </div>
